# LVGenerator

./: .gitignore  pyproject.toml
.claude/: settings.local.json
docs/certification/: output_x81_roundtrip.X81  output_x84_roundtrip.X84  output_x86_roundtrip.X86
docs/certification/x81/: BVBS_Pruefdatei GAEB DA XML 3.3 - AVA - V 11 06 2021.X81
docs/certification/x84/: BVBS_Pruefdatei GAEB DA XML 3.3 - AVA - V 11 06 2021.X84
docs/certification/x86/: BVBS_Pruefdatei GAEB DA XML 3.3 - AVA - V 11 06 2021.X86
docs/certification/xsd/: GAEB_DA_XML_82_3.3_2021-05.xsd  GAEB_DA_XML_83_3.3_2021-05.xsd  GAEB_DA_XML_84_3.3_2021-05.xsd  GAEB_DA_XML_85_3.3_2021-05.xsd  GAEB_DA_XML_86_3.3_2021-05.xsd  GAEB_DA_XML_87_3.3_2021-05.xsd
src/lvgenerator/: constants.py  main.py  validators.py
src/lvgenerator/commands/: base.py  category_commands.py  (+7 more)
tests/: conftest.py  test_certification.py  test_oz_mask.py  test_validators.py
tests/fixtures/: sample_extended.xml  sample_x81.xml  sample_x83.xml  sample_x84.xml  sample_x84_bidcomm.xml  sample_x86.xml
tests/test_commands/: test_drag_drop_commands.py  test_item_commands.py  test_move_commands.py  test_project_commands.py  test_structure_commands.py
tests/test_export/: test_excel_exporter.py  test_preisspiegel_exporter.py
tests/test_gaeb/: test_html_converter.py  test_phase_converter.py  test_reader.py  test_writer.py  test_writer_comprehensive.py
tests/test_integration/: test_project_workflow.py
tests/test_models/: test_category.py  test_item.py
tests/test_services/: test_preisspiegel_service.py  test_recent_files.py
(+44 files in other folders)
