[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lvgenerator"
version = "0.1.0"
description = "Desktop application for reading and writing GAEB DA XML files"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "PySide6>=6.6",
    "lxml>=5.0",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-qt>=4.2",
    "ruff>=0.1",
]

[project.gui-scripts]
lvgenerator = "lvgenerator.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/lvgenerator"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
